// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs Bad source input 1`] = `
Array [
  Object {
    "exn": Object {
      "RE_EXN_ID": "Caml_js_exceptions.Error/1",
      "_1": [TypeError: source.str.charAt is not a function],
    },
    "kind": "Compile",
    "location": undefined,
    "message": "An exception was thrown while compiling this template. This is probably due to malformed input.",
    "path": Array [
      "Template",
    ],
  },
]
`;

exports[`Lexer Illegal binding names 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Illegal binding names 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"false\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Illegal characters 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 11,
    },
    "message": "Invalid character: \\"*\\".",
    "path": Array [
      "BadCharacter",
    ],
  },
]
`;

exports[`Lexer Illegal characters 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected character: \\"%\\". Expected: \\"...\\".",
    "path": Array [
      "BadCharacter",
    ],
  },
]
`;

exports[`Lexer Illegal characters 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 16,
    },
    "message": "Unexpected character: \\"%\\". Expected: \\"}\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Illegal characters 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 8,
    },
    "message": "Invalid character: \\"%\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Illegal characters 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "Unexpected token: \\"b\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Illegal characters 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"?\\".",
    "path": Array [
      "BadCharacter",
    ],
  },
]
`;

exports[`Lexer Illegal characters 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected character: \\"%\\". Expected: \\"}\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Other stuff 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 8,
    },
    "message": "Unterminated string.",
    "path": Array [
      "BadString",
    ],
  },
]
`;

exports[`Lexer Other stuff 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 9,
    },
    "message": "Unterminated string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Other stuff 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 7,
    },
    "message": "Unterminated comment.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Other stuff 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 15,
    },
    "message": "Unterminated comment.",
    "path": Array [
      "BadComment",
    ],
  },
]
`;

exports[`Lexer Other stuff 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 7,
    },
    "message": "Unexpected end of file.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Lexer Other stuff 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 6,
    },
    "message": "\\"--1\\" is an illegal identifier name.",
    "path": Array [
      "BadIdentifier",
    ],
  },
]
`;

exports[`Lexer Other stuff 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Syntax",
    "location": Object {
      "character": 7,
    },
    "message": "Unknown escape sequence: a.",
    "path": Array [
      "InvalidEscapeToken",
    ],
  },
]
`;

exports[`Parser Components that didn't compile are reported correctly 1`] = `
Object {
  "NAME": "errors",
  "VAL": Array [
    Object {
      "exn": undefined,
      "kind": "Syntax",
      "location": Object {
        "character": 3,
      },
      "message": "Unexpected end of file.",
      "path": Array [
        "A",
      ],
    },
    Object {
      "exn": undefined,
      "kind": "Syntax",
      "location": Object {
        "character": 3,
      },
      "message": "Unexpected end of file.",
      "path": Array [
        "B",
      ],
    },
  ],
}
`;

exports[`Parser Duplicate components are reported correctly 1`] = `
Object {
  "NAME": "errors",
  "VAL": Array [
    Object {
      "exn": undefined,
      "kind": "Compile",
      "location": undefined,
      "message": "The template component name \\"A\\" was used twice. Every component needs a unique name.",
      "path": Array [],
    },
  ],
}
`;

exports[`Parser Illegal binding name 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "BadBinding",
    ],
  },
]
`;

exports[`Parser Illegal binding name 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 13,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Illegal binding name 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Illegal binding name 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Invalid statements 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"c\\".",
    "path": Array [
      "BadStatement",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"{\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"[\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"}\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"]\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\",\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected token: \\"/\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\":\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"\\"a\\"\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 9`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 10`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected token: \\"[\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 11`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 12`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 13,
    },
    "message": "Unexpected token: \\"[\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 13`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 13,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 14`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 28,
    },
    "message": "Unexpected token: \\"[end of file]\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 15`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 31,
    },
    "message": "Unexpected token: \\"[end of file]\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 16`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"/\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 17`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "Unexpected token: \\"#\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 18`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 21,
    },
    "message": "Unexpected token: \\"[text]:  d\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 19`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 20`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 4,
    },
    "message": "Unexpected token: \\"...\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 21`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 4,
    },
    "message": "Unexpected token: \\"=\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 22`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 10,
    },
    "message": "Unexpected token: \\"~\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 23`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "Unexpected token: \\"match\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser Unexpected tokens 24`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"&\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Parser You can't unescape child templates 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 5,
    },
    "message": "Unexpected token: \\"A\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Count mismatch failure 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 4,
    },
    "message": "The number of patterns does not match the number of data.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Count mismatch failure 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 4,
    },
    "message": "The number of patterns does not match the number of data.",
    "path": Array [
      "",
    ],
  },
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 4,
    },
    "message": "The number of patterns does not match the number of data.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Illegal bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 25,
    },
    "message": "Unexpected token: \\"Abc\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Illegal bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Illegal bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "Unexpected token: \\"true\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Illegal bindings 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 25,
    },
    "message": "Unexpected token: \\"false\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Illegal bindings 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 5,
    },
    "message": "Unexpected token: \\"null\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Match failure 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 5,
    },
    "message": "None of the patterns match the data. Consider a catch-all case to avoid this.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Match failure 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 5,
    },
    "message": "None of the patterns match the data. Consider a catch-all case to avoid this.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Missing bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 9,
    },
    "message": "Binding \\"b\\" does not exist.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Missing bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 15,
    },
    "message": "Binding \\"b\\" does not exist.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Missing bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 8,
    },
    "message": "\\"c\\" is type array but the data is type null.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type boolean but the data is type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type boolean but the data is type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type boolean but the data is type number.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type boolean but the data is type number.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type boolean but the data is type array.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type boolean but the data is type array.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 27,
    },
    "message": "This pattern is type boolean but the data is type object.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type object but the data is type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type object but the data is type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type object but the data is type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type object but the data is type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type object but the data is type array.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type object but the data is type number.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type object but the data is type number.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 26,
    },
    "message": "This pattern is type number but the data is type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type array but the data is type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type array but the data is type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type array but the data is type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type array but the data is type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type array but the data is type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type array but the data is type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type array but the data is type number.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 27,
    },
    "message": "This pattern is type array but the data is type object.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 9`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 27,
    },
    "message": "This pattern is type array but the data is type object.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 10`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 4,
    },
    "message": "None of the patterns match the data. Consider a catch-all case to avoid this.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 11`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type number but the data is type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type number but the data is type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type number but the data is type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type number but the data is type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type number but the data is type array.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 27,
    },
    "message": "This pattern is type number but the data is type object.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type string but the data is type number.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type string but the data is type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type string but the data is type boolean.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type string but the data is type array.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 27,
    },
    "message": "This pattern is type string but the data is type object.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 17,
    },
    "message": "Unexpected token: \\"}\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 18,
    },
    "message": "Unexpected token: \\",\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 18,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 22,
    },
    "message": "Unexpected token: \\"[\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 20,
    },
    "message": "Unexpected token: \\"\\"a\\"\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 21,
    },
    "message": "Unexpected token: \\",\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "Unexpected token: \\"\\"a\\"\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "Unexpected token: \\"{\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 9`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 26,
    },
    "message": "Unexpected token: \\"[\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 10`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 26,
    },
    "message": "Unexpected token: \\"b\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 11`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 20,
    },
    "message": "Unexpected token: \\"b\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 12`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 20,
    },
    "message": "Unexpected token: \\"]\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 13`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 12,
    },
    "message": "Unexpected token: \\"}\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 14`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 12,
    },
    "message": "Unexpected token: \\"match\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 15`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 19,
    },
    "message": "Unexpected token: \\"a\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 16`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 27,
    },
    "message": "Unexpected token: \\"map\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 17`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 27,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 18`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 14,
    },
    "message": "Unexpected token: \\"B\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 19`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 14,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 20`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 6,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Patterns You can't bind a value more than once. 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 21,
    },
    "message": "\\"x\\" is bound multiple times in this pattern.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Error messages display component name correctly 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"a\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      "A",
      "",
    ],
  },
]
`;

exports[`Rendering Exceptions thrown in components are caught correctly 1`] = `
Array [
  Object {
    "exn": Object {
      "Error": [Error],
      "RE_EXN_ID": "Failure",
      "_1": "fail.",
    },
    "kind": "Render",
    "location": undefined,
    "message": "An exception was thrown while rendering a template component.",
    "path": Array [
      "ExceptionsTest",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 8,
    },
    "message": "\\"a\\" is a string. I can only map arrays.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 8,
    },
    "message": "\\"b\\" is a boolean. I can only map arrays.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "Bad map type: \\"null\\". I can only map bindings and arrays.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 8,
    },
    "message": "\\"a\\" is type array but the data is type string.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Map type mismatches 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 18,
    },
    "message": "Binding \\"z\\" does not exist.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Missing bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"z\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Missing bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "Template child \\"Z\\" does not exist.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Missing bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Compile",
    "location": Object {
      "character": 4,
    },
    "message": "Component \\"Z\\" either does not exist or couldn't be compiled.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Missing bindings 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "Template child \\"C\\" does not exist.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Missing bindings 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 12,
    },
    "message": "Binding \\"b\\" does not exist.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Multiple render errors are all reported 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"a\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      "",
    ],
  },
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 12,
    },
    "message": "\\"b\\" is type array. I can only echo strings and numbers.",
    "path": Array [
      "",
    ],
  },
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 20,
    },
    "message": "\\"c\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Type mismatches 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"b\\" is type boolean. I can only echo strings and numbers.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Type mismatches 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"c\\" is type array. I can only echo strings and numbers.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Rendering Type mismatches 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 5,
    },
    "message": "\\"b\\" is type boolean. I can only echo strings and numbers.",
    "path": Array [
      "",
    ],
  },
]
`;

exports[`Stack trace is rendered correctly child templates 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 12,
    },
    "message": "\\"y\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      "section: B#Children",
      "A",
    ],
  },
]
`;

exports[`Stack trace is rendered correctly components 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"c\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      "C",
      "match",
      "B",
      "A",
    ],
  },
]
`;

exports[`Stack trace is rendered correctly map 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 23,
    },
    "message": "\\"c\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      0,
      "map",
      "MapTest",
    ],
  },
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 23,
    },
    "message": "\\"c\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      1,
      "map",
      "MapTest",
    ],
  },
]
`;

exports[`Stack trace is rendered correctly match 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 50,
    },
    "message": "\\"b\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      "match",
      "match",
      "MatchTest",
    ],
  },
]
`;
